--- a/Automate_ans_checking/QuesDescription.html
+++ b/Automate_ans_checking/QuesDescription.html
@@ -1,1 +1,14 @@
-
+<p>John is a school teacher, he has to check some answer sheets but his schedule for today is quite busy also he has plans for seeing El Cl&aacute;sico(between Madrid vs Barca) so can you help him by <em>writing a computer program which can do this mundane task of giving marks.</em></p>
+<p><strong>Input:</strong><br />14 lines will be given as input to console(stdin) It will contain Name of Student, 10 Questions with the answer given by Student and placeholder for Score.</p>
+<p><strong>Important note:</strong></p>
+<p>1) while dealing with float<br /> Name: Aarav<br /> 118 / 18 != 6.56 False<br /> LHS = 6.55555555556 first round LHS to two decimal place<br /> now LHS = 6.56 since 6.56 == 6.56 is True therefore 118 / 18 != 6.56 False is a correct answer so <strong>award +1 point for this answer.</strong></p>
+<p>2) treat '=' as '==' it means your program should do equality check when it encounters equations like this 15*8 = 75 False</p>
+<p>3) Each question have this pattern<br /> <em>Operand_A Arithmetic_Operator Operand_B Comparision_Operator Operand_C Student_Ans</em><br /> 10 + 75 &lt; 95 True</p>
+<p><em>Arithmetic_Operator = ['*', '/', '-', '+']<br /> Comparision_Operator = ['&gt;', '&gt;=', '&lt;', '&lt;=', '!=', '=']</em></p>
+<p><strong>Output:</strong> Just Print the Score obtained by Student</p>
+<p><strong>Sample Input&nbsp;&nbsp; *points(will not be present in input)</strong></p>
+<p>Name: Aadish</p>
+<p>120 * 68 &gt; 8162 True&nbsp; 0<br />115 / 70 = 5.64 False 1<br />93 * 55 &lt;= 5111 True 0<br />140 / 24 = 3.83 False 1<br />103 + 44 != 147 False 1<br />107 + 84 != 192 True 1<br />116 / 37 &gt;= -0.86 True 1<br />168 - 5 &gt;= 166 False 1<br />95 - 62 = 36 False 1<br />131 / 45 = -0.09 False 1</p>
+<p>Score:</p>
+<p><strong>Sample Output</strong></p>
+<p>&nbsp;8</p>
